--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ msal = "^1.31.0"
 requests = "^2.32.3"
 icalendar = "^6.0.0"
 watchdog = "^5.0.3"
-
+asyncpg = "^0.28.0"  # For async PostgreSQL connections
+# psycopg2-binary = "^2.9.7"  # Removed for asyncpg usage
 
 [build-system]
 requires = ["poetry-core"]
